--- a/app/views/users/homes/top.html.erb
+++ b/app/views/users/homes/top.html.erb
@@ -4,7 +4,7 @@
       <%= form_with(url: search_path, method: :get, local: true) do |f| %>
         <%= f.text_field :content %>
 
-        <%= f.select :model, [["お店", "shop"], ["コース", "course"]] %>
+        <%= f.select :model, [["お店", "shop"], ["コース", "course"]], {id: 'category'} %>
 
         <%= f.select :price_gteq, [["２０００円", "2000"], ["２５００円", "2500"], ["３０００円", "3000"], ["３５００円", "3500"], ["４０００円", "4000"], ["４５００円", "4500"]], :prompt => "なんか選んでよ" %> 〜 <%= f.select :price_lteq, [["２０００円", "2000"], ["２５００円", "2500"], ["３０００円", "3000"], ["３５００円", "3500"], ["４０００円", "4000"], ["４５００円", "4500"], ["５０００円", "5000"], ["５５００円", "5500"], ["６０００円", "6000"]], :prompt => "上限なし" %>
 
