--- a/app/views/admins/shop_genres/index.html.erb
+++ b/app/views/admins/shop_genres/index.html.erb
@@ -11,9 +11,7 @@
 					</tr>
 					<% @genres.each do |genre| %>
 						<tr>
-							<td><%= attachment_image_tag genre, :genre_image, src: "", id:"item_image", size: "210x60", alt:"Image preview", class: "item_prev", fallback: "no_image.jpg" %>
-								<%= genre.name %>
-							</td>
+							<td><%= genre.name %></td>
 							<td><%= link_to "EDIT", edit_admins_shop_genre_path(genre.id), class: "edit-btn" %></td>
 							<td><%= link_to "DELETE",admins_shop_genre_path(genre), method: :delete, class: "destroy-btn" %></td>
 						</tr>
@@ -22,15 +20,6 @@
 
 				<%= form_for(@genre, url: admins_shop_genres_path) do |f| %>
 					<div class = "row">
-						<div class="col-xs-6">
-							<div class="field">
-								<%= attachment_image_tag @genre, :genre_image, src: "", id:"img_prev", size: "200x200", alt:"Image preview", class: "item_prev", fallback: "no_image.jpg" %>
-							</div>
-				 			<div class="field">
-								<%= f.label :genre_image,"Image select" ,class: "btn btn-warning btn-lg" ,for:"post_img"%>
-								<%= f.attachment_field :genre_image, id:"post_img", class: "image", style:"display:none;" %>
-							</div>
-						</div>
 						<div class="col-xs-6">
 							<div class="field">
 								<%= f.label :name, "GENRE NAME" %>
