--- a/app/views/admins/shop_genres/edit.html.erb
+++ b/app/views/admins/shop_genres/edit.html.erb
@@ -1,31 +1,245 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-8 col-xs-offset-2">
-			<h2>GENRE EDIT:</h2>
-			<div class="genre-body">
-				<%= form_for(@genre, url: admins_shop_genre_path(@genre.id)) do |f| %>
-					<div class = "row">
-						<div class="col-xs-6">
-							<div class="field">
-								<%= attachment_image_tag @genre, :genre_image, src: "", id:"img_prev", size: "200x150", alt:"Image preview", class: "item_prev", fallback: "no_image.jpg" %>
-							</div>
-				 			<div class="field">
-								<%= f.label :genre_image,"Image select" ,class: "btn btn-warning btn-lg" ,for:"post_img"%>
-								<%= f.attachment_field :genre_image, id:"post_img", class: "image", style:"display:none;" %>
-							</div>
-						</div>
-						<div class="col-xs-6">
-							<div class="field">
-								<%= f.label :name, "GENRE NAME" %>
-								<%= f.text_field :name %>
-							</div>
-							<div class="field">
-								<%= f.submit "変更を保存", class: "update-btn" %>
-							</div>
-						</div>
-					</div>
-				<% end %>
+		<h1>G E N R E：編集</h1>
+	</div>
+	<div class="row">
+		<%= form_for(@genre, url: admins_shop_genre_path(@genre.id)) do |f| %>
+			<div class="cp_iptxt">
+				<%= f.text_field :name, class: "ef", type: "text" %>
+				<%= f.label :name, "Genre変更入力" %>
+				<span class="focus_line"><i></i></span>
 			</div>
-		</div>
+			<div class="btn-border-gradient-wrap btn-border-gradient-wrap--gold">
+				<button type="submit" class="btn btn-border-gradient">
+					<span class="btn-text-gradient--gold">UPDATE</span>
+				</button>
+				<%= link_to "DELETE",admins_shop_genre_path(@genre), method: :delete, class: "btn-box" %>
+			</div>
+		<% end %>
 	</div>
 </div>
+
+<style>
+
+.cp_iptxt {
+  position: relative;
+  width: 300p;
+  margin: 10% 3% 3% 0;
+}
+
+.cp_iptxt input[type='text'] {
+  font: 15px/24px sans-serif;
+  box-sizing: border-box;
+  width: 100%;
+  letter-spacing: 1px;
+  padding-left: 4em;
+}
+
+.cp_iptxt input[type='text']:focus {
+  outline: none;
+}
+
+.ef {
+  padding: 7px 14px;
+  transition: 0.4s;
+  border: 1px solid #1b2538;
+  background: transparent;
+}
+
+.ef ~ .focus_line:before,
+.ef ~ .focus_line:after {
+  position: absolute;
+  top: -1px;
+  left: 50%;
+  width: 0;
+  height: 2px;
+  content: '';
+  transition: 0.4s;
+  background-color: #ffde59;
+}
+
+.ef ~ .focus_line:after {
+  top: auto;
+  bottom: 0;
+}
+
+.ef ~ .focus_line i:before,
+.ef ~ .focus_line i:after {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 2px;
+  height: 0;
+  content: '';
+  transition: 0.6s;
+  background-color: #ffde59;
+}
+
+.ef ~ .focus_line i:after {
+  right: 0;
+  left: auto;
+}
+
+.ef:focus ~ .focus_line:before,
+.ef:focus ~ .focus_line:after,
+.cp_iptxt.ef ~ .focus_line:before,
+.cp_iptxt.ef ~ .focus_line:after {
+  left: 0;
+  width: 100%;
+  transition: 0.4s;
+}
+
+.ef:focus ~ .focus_line i:before,
+.ef:focus ~ .focus_line i:after,
+.cp_iptxt.ef ~ .focus_line i:before,
+.cp_iptxt.ef ~ .focus_line i:after {
+  top: -1px;
+  height: 100%;
+  transition: 0.6s;
+}
+
+.ef ~ label {
+  position: absolute;
+  z-index: -1;
+  top: 10px;
+  left: 14px;
+  width: 100%;
+  transition: 0.3s;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+}
+
+.ef:focus ~ label,
+.cp_iptxt.ef ~ label {
+  font-size: 12px;
+  top: -18px;
+  left: 0;
+  transition: 0.3s;
+  color: #ff914d;
+}
+
+.btn-border-gradient-wrap {
+  display: inline-block;
+  padding: 0.2rem;
+  border-radius: 0.5rem;
+}
+
+.btn-border-gradient-wrap--gold {
+  background-image: -webkit-linear-gradient(
+    315deg,
+    #704308 0%,
+    #ffce08 37%,
+    #fefeb2 47%,
+    #fafad6 50%,
+    #fefeb2 53%,
+    #e1ce08 63%,
+    #704308 100%
+  );
+  background-image: linear-gradient(
+    135deg,
+    #704308 0%,
+    #ffce08 37%,
+    #fefeb2 47%,
+    #fafad6 50%,
+    #fefeb2 53%,
+    #e1ce08 63%,
+    #704308 100%
+  );
+}
+
+.btn-border-gradient-wrap--gold:hover a.btn {
+  text-shadow: 0 0 15px rgba(250, 250, 214, 0.5),
+    0 0 15px rgba(250, 250, 214, 0.5), 0 0 15px rgba(250, 250, 214, 0.5),
+    0 0 15px rgba(250, 250, 214, 0.5);
+}
+
+button.btn-border-gradient {
+  font-size: 2rem;
+  background: #000;
+}
+
+.btn-text-gradient--gold {
+  font-family: "ヒラギノ明朝 Pro W3", "Hiragino Mincho Pro",
+    "Hiragino Mincho ProN", "HGS明朝E", "ＭＳ Ｐ明朝", serif;
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(#ffffdb),
+    to(#a16422)
+  );
+  background: -webkit-linear-gradient(bottom, #ffffdb, #a16422);
+  background: linear-gradient(to top, #ffffdb, #a16422);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+
+h1 {
+    position: relative;
+    padding-bottom: 0.5em;
+}
+
+h1::after {
+     position: absolute;
+     content: '';
+     left: 0;
+     bottom: 0;
+     width: 100%;
+     height: 7px;
+     box-sizing: border-box;
+     border-top: 3px solid black;
+     border-bottom: 1px solid black;
+}
+
+.btn-box {
+  display: inline-block;
+  width: 100px;
+  text-align: center;
+  font-size: 16px;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 7%;
+  position: relative;
+  border: 2px solid #ffffff;
+  transition: .4s;
+}
+
+.btn-box:hover {
+  border: 2px solid transparent;
+  color: #000;
+  text-decoration: none;
+}
+
+.btn-box:before, .btn-box:after {
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  transform: scale(0);
+  transition: .2s;
+}
+
+.btn-box:before {
+  border-bottom: 2px solid #000;
+  border-left: 2px solid #000;
+  transform-origin: 100% 0%;
+}
+
+.btn-box:after {
+  border-top: 2px solid #000;
+  border-right: 2px solid #000;
+  transform-origin: 0% 100%;
+}
+
+.btn-box:hover:after,
+.btn-box:hover:before {
+  transform: scale(1);
+}
+</style>
