--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -8,7 +8,8 @@
     <p><%= current_user.email %></p>
     <p>住所</p>
     <p><%= current_user.address %></p>
-    <%= link_to "登録情報編集", edit_users_user_path(current_user) %>
+    <%= link_to "登録情報編集", edit_users_user_path(current_user.id) %>
+    <%= link_to "お気に入り編集", users_favorites_path(current_user.id) %>
 <% else %>
-
+    redirect_to(root_path)
 <% end %>
