--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,105 @@
 
  @import "bootstrap";
 
+.head_all {
+	width: 100%;
+}
 
+.header_sub {
+	padding: 16px 32px;
+}
 
+.header_sub li {
+	display: inline-flex;
+	margin-right: 10px;
+	font-size: 14px;
+}
 
+.header_sub span {
+	height: 32px;
+	background-color: rgb(231, 54, 80);
+	width: 5%;
+}
+
+.header_sub span li {
+}
+
+.btn,
+a.btn,
+button.btn {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+}
+/*背景*/
+.btn-wrap {
+  margin: 20px;
+}
+a.btn-c {
+  font-size: 2rem;
+  position: relative;
+  padding: 1.5rem 4rem 1.5rem 6rem;
+  color: #000;
+  border: 2px solid #000;
+  border-radius: 100vh;
+  background: #fff100;
+  -webkit-box-shadow: 0 5px 0 #e6d900;
+  box-shadow: 0 5px 0 #e6d900;
+}
+.btn-wrap btn btn-c span {
+  font-size: 1.3rem;
+  line-height: 1.3;
+  position: absolute;
+  top: -10px;
+  left: -20px;
+  width: 64px;
+  height: 64px;
+  padding-top: 15px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  color: #000;
+  border: 2px solid #000;
+  border-radius: 50%;
+  background: #fff;
+}
+a.btn-c span em {
+  font-style: normal;
+  color: #d20010;
+}
+a.btn-c small {
+  font-weight: bold;
+}
+a.btn-c i {
+  margin-right: 1rem;
+}
+a.btn-c:hover {
+  -webkit-transform: translate(0, 3px);
+  transform: translate(0, 3px);
+  color: #000;
+  background: #fff21a;
+  -webkit-box-shadow: 0 2px 0 #e6d900;
+  box-shadow: 0 2px 0 #e6d900;
+}
+a.btn-c:hover span {
+  -webkit-transform: translate(0, -5px);
+  transform: translate(0, -5px);
+}
  .simple-calendar td {
  	cursor: pointer;
  }
