--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,55 +15,60 @@
 
   <body>
 
-    <div class=" head-all">
-      <% if user_signed_in? && !request.fullpath.include?("admins") && !request.fullpath.include?("shops") %>
-      <nav>
-        <ul>
-        <li>
-        </li>
-        <li class="nav-list"><%= link_to "MyPage", users_user_path(current_user.id), class: "head-list" %></li>
-        <li class="nav-list"><%= link_to "About", homes_about_path, class: "head-list" %></li>
-        <li class="nav-list"><%= link_to "予約履歴", users_orders_path, class: "head-list" %></li>
-        <li class="nav-list"><%= link_to "お問い合わせはこちら", new_users_inquiry_path, class: "head-list" %></li>
-        <li class="nav-list"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "head-list" %></li>
-        </ul>
-      </nav>
+    <div class="head-all">
+      <div class="header_sub">
+        <% if user_signed_in? && !request.fullpath.include?("admins") && !request.fullpath.include?("shops") %>
+        <nav>
+          <ul>
+            <li class="nav-list"><%= link_to "MyPage", users_user_path(current_user.id), class: "head-list" %></li>
+            <li class="nav-list"><%= link_to "About", homes_about_path, class: "head-list" %></li>
+            <li class="nav-list"><%= link_to "予約履歴", users_orders_path, class: "head-list" %></li>
+            <li class="nav-list"><%= link_to "お問い合わせはこちら", new_users_inquiry_path, class: "head-list" %></li>
+            <li class="nav-list"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-c" %></li>
+            <div class="btn-wrap">
+              <span>簡単!<br><em>30秒</em></span><li class="nav-list"><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-c" %></li></span></small>
+            </div>
+          </ul>
+        </nav>
 
-      <% elsif admin_signed_in? && request.fullpath.include?("admins") %>
-      <nav>
-        <ul>
-        <li class="nav-list"><%= link_to "" %></li>
-        <li class="nav-list"><%= link_to "" %></li>
-        <li class="nav-list"><%= link_to "" %></li>
-        <li class="nav-list"><%= link_to "" %></li>
-        <li class="nav-list"><%= link_to "Logout", destroy_admin_session_path, method: :delete, class: "head-list" %></li>
-        </ul>
-      </nav>
+        <% elsif admin_signed_in? && request.fullpath.include?("admins") %>
+        <nav>
+          <ul>
+            <li class="nav-list"><%= link_to "" %></li>
+            <li class="nav-list"><%= link_to "" %></li>
+            <li class="nav-list"><%= link_to "" %></li>
+            <li class="nav-list"><%= link_to "" %></li>
+            <span><li class="nav-list"><%= link_to "Logout", destroy_admin_session_path, method: :delete, class: "btn btn-c" %></li></span>
+          </ul>
+        </nav>
 
-      <% elsif shop_signed_in? && request.fullpath.include?("shops") %>
-      <nav>
-        <ul>
-        <li class="nav-list"><%= link_to "" %></li>
-        <li class="nav-list"><%= link_to "" %></li>
-        <li class="nav-list"><%= link_to "" %></li>
-        <li class="nav-list"><%= link_to "" %></li>
-        <li class="nav-list"><%= link_to "Logout", destroy_shop_session_path, method: :delete, class: "head-list" %></li>
-        </ul>
-      </nav>
+        <% elsif shop_signed_in? && request.fullpath.include?("shops") %>
+        <nav>
+          <ul>
+            <li class="nav-list"><%= link_to "" %></li>
+            <li class="nav-list"><%= link_to "" %></li>
+            <li class="nav-list"><%= link_to "" %></li>
+            <li class="nav-list"><%= link_to "" %></li>
+            <span><li class="nav-list"><%= link_to "Logout", destroy_shop_session_path, method: :delete, class: "btn btn-c" %></li></span>
+          </ul>
+        </nav>
 
-      <% else %>
-      <ul>
-        <li class="nav-list"><%= link_to "About", homes_about_path, class: "head-list" %></li>
-        <li class="nav-list"><%= link_to "会員登録はこちら", homes_terms_path, class: "head-list" %></li>
-        <li class="nav-list"><%= link_to "会員の方はこちら", new_user_session_path, class: "head-list" %></li>
-      </ul>
-      <% end %>
+        <% else %>
+        <ul>
+            <li class="nav-list"><%= link_to "About", homes_about_path, class: "head-list" %></li>
+            <div class="btn-wrap">
+              <span>簡単!<br><em>30秒</em></span><li class="nav-list"><%= link_to "会員登録はこちら", homes_terms_path, class: "btn btn-c" %></li></span></small>
+            </div>
+            <span><li class="nav-list"><%= link_to "会員の方はこちら", new_user_session_path, class: "btn btn-c" %></li></span>
+        </ul>
+        <% end %>
+      </div>
     </div>
     <%= yield %>
 
     <footer>
       <div id="footer">
-        <div class="copyright">© 2020 Catering Tokyo</div>
+        <div class="copyright">© 2020 株式会社ビッグマッスル</div>
       </div>
       <div>
         <%= link_to "お店の方はこちら", new_shop_session_path, class: "head-list" %></li>
