--- a/app/views/admins/shop_genres/edit.html.erb
+++ b/app/views/admins/shop_genres/edit.html.erb
@@ -201,7 +201,7 @@ h1::after {
   color: #ffffff;
   text-decoration: none;
   font-weight: bold;
-  padding: 7%;
+  padding: 7% 4%;
   position: relative;
   border: 2px solid #ffffff;
   transition: .4s;
