--- a/app/views/admins/shop_genres/index.html.erb
+++ b/app/views/admins/shop_genres/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<h1 class="genre_title"> G E N R E：一覧 </h1>
+		<h1> G E N R E：一覧 </h1>
 	</div>
 	<div class="row">
 		<% @genres.each do |genre| %>
@@ -15,7 +15,7 @@
 		<% end %>
 	</div>
 	<div class="row">
-		<h1 class="genre_title">G E N R E：追加</h1>
+		<h1>G E N R E：追加</h1>
 	</div>
 	<div class="row">
 		<%= form_for(@genre, url: admins_shop_genres_path) do |f| %>
@@ -29,26 +29,13 @@
 			</div>
 		<% end %>
 	</div>
-	<div class="row">
-		<%= link_to "TOPページ", admins_top_path, class: "btn top_back" %>
+	<div class="row top_link">
+		<%= link_to "TOPページ", admins_top_path, class: "btn btn-border" %>
 	</div>
 </div>
 
 
 <style>
-
-.top_back{
-  padding: 0;
-  margin: 10% auto;
-  font-family: 'Hannotate TC','Osaka',sans-serif;
-  border: 2px solid;
-  border-radius: 10px;
-}
-
-.top_back:hover{
-  color: #000000;
-  text-decoration: none;
-  }
 
 .cp_iptxt {
   position: relative;
@@ -176,7 +163,13 @@
   );
 }
 
-.btn-border-gradient {
+.btn-border-gradient-wrap--gold:hover a.btn {
+  text-shadow: 0 0 15px rgba(250, 250, 214, 0.5),
+    0 0 15px rgba(250, 250, 214, 0.5), 0 0 15px rgba(250, 250, 214, 0.5),
+    0 0 15px rgba(250, 250, 214, 0.5);
+}
+
+button.btn-border-gradient {
   font-size: 2rem;
   background: #000;
 }
@@ -189,6 +182,7 @@
     left bottom,
     left top,
     from(#ffffdb),
+    to(#a16422)
   );
   background: -webkit-linear-gradient(bottom, #ffffdb, #a16422);
   background: linear-gradient(to top, #ffffdb, #a16422);
@@ -196,12 +190,50 @@
   -webkit-text-fill-color: transparent;
 }
 
-.genre_title {
+.btn-border {
+    border: 2px solid #000;
+    border-radius: 0;
+    background: #fff;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    margin: auto;
+}
+
+.btn-border:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 10px;
+    height: 100%;
+    content: '';
+    -webkit-transition: all .3s;
+    transition: all .3s;
+    -webkit-transform: translateX(0) translateY(0);
+    transform: translateX(0) translateY(0);
+    border-radius: 0 50% 50% 0;
+    background: #000;
+}
+
+.btn-border:hover:before {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: bold;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    content: '\f061';
+    -webkit-transform: translateX(460%) translateY(.5rem);
+    transform: translateX(460%) translateY(.5rem);
+    color: #fff;
+    border-radius: 50%;
+}
+
+
+h1 {
     position: relative;
     padding-bottom: 0.5em;
 }
 
-.genre_title::after {
+h1::after {
      position: absolute;
      content: '';
      left: 0;
@@ -289,7 +321,7 @@
 
 .b1_roll div:nth-child(2) {
     color: #000000;
-    background-color: #ffb386;
+    background-color: #ffdd4d;
     transform: rotateX(0deg);
     -webkit-transform: rotateX(0deg);
     -moz-transform: rotateX(0deg);
@@ -323,4 +355,53 @@
     -moz-transform: rotateX(-90deg);
 }
 
+.btn-box {
+  display: inline-block;
+  width: 100px;
+  text-align: center;
+  font-size: 16px;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 7%;
+  position: relative;
+  border: 2px solid #ffffff;
+  transition: .4s;
+}
+
+.btn-box:hover {
+  border: 2px solid transparent;
+  color: #000;
+  text-decoration: none;
+}
+
+.btn-box:before, .btn-box:after {
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  transform: scale(0);
+  transition: .2s;
+}
+
+.btn-box:before {
+  border-bottom: 2px solid #000;
+  border-left: 2px solid #000;
+  transform-origin: 100% 0%;
+}
+
+.btn-box:after {
+  border-top: 2px solid #000;
+  border-right: 2px solid #000;
+  transform-origin: 0% 100%;
+}
+
+.btn-box:hover:after,
+.btn-box:hover:before {
+  transform: scale(1);
+}
 </style>
