--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,253 +1,25 @@
-<div class="container user_container">
-    <div class="row user_status">
-       <h1 class="status_name1"> 有　効　会　員： </h1>
-    </div>
-    <div class="row oya">
-      <% @users.each do |user| %>
-        <% if user.deleted_at.nil? %>
-        	<table class="user_table">
-          	  <tr>
-          	    <th class="popular"><span class="inner"><span class="no1">ユーザー</span>会員情報</span></th>
-          	  </tr>
-              <tr>
-                <td class="popular">ID:<%= user.id %></td>
-              </tr>
-          	  <tr>
-          	    <td class="popular">name：<%= user.name %></td>
-          	  </tr>
-          	  <tr>
-          	    <td>TEL：<%= user.phonenumber %></td>
-          	  </tr>
-          	  <tr>
-          	    <td class="popular"><%= link_to "ステータス変更", admins_user_path(user.id) %></td>
-          	  </tr>
-        	</table>
-        <% end %>
-      <% end %>
-    </div>
-
-    <div class="row user_status">
-       <h1 class="status_name2"> 無　効　会　員： </h1>
-    </div>
-    <div class="row oya">
-        <% @users.each do |user| %>
-          <% if user.deleted_at.nil? %>
-          <% else %>
-            <table class="user_table_false">
-                <tr>
-                  <th class="popular"><span class="inner"><span class="no1">退会済み</span>会員情報</span></th>
-                </tr>
-                <tr>
-                  <td class="popular">ID:<%= user.id %></td>
-                </tr>
-                <tr>
-                  <td class="popular">name：<%= user.name %></td>
-                </tr>
-                <tr>
-                  <td>TEL：<%= user.phonenumber %></td>
-                </tr>
-                <tr>
-                  <td class="popular"><%= link_to "ステータス変更", admins_user_path(user.id) %></td>
-                </tr>
-            </table>
-          <% end %>
-        <% end %>
-    </div>
-</div>
-
+<table>
+	<tr>
+		<th>名前</th>
+		<th>電話番号</th>
+		<th>住所</th>
+		<th>会員状況</th>
+		<th></th>
+	</tr>
+   <% @users.each do |user| %>
+		<tr>
+			<td><%= user.name %></td>
+			<td>TEL:<%= user.phonenumber %></td>
+			<td><%= user.address %></td>
+			<% if user.deleted_at.nil? %>
+				<td>有効会員</td>
+			<% else %>
+				<td>退会処理済</td>
+			<% end %>
+			<td><%= link_to "会員ステータス処理", admins_user_path(user.id) %></td>
+		</tr>
+    <% end %>
+</table>
 <div class="row">
 <%= link_to "トップへ戻る", admins_top_path, class: "top_list" %>
 </div>
-
-<style>
-
-.user_container{
-  font-family: 'Hannotate TC','Osaka',sans-serif;
-}
-
-.user_status{
-  margin: 1%;
-}
-
-.oya{
-	display: flex;
-	align-items:stretch;
-	justify-content:center;
-	flex-wrap: wrap;
-}
-
-.user_table{
-  border-collapse: collapse;
-  border-spacing: 0;
-  table-layout: fixed;
-  width: 15%;
-  margin: 2% 1%;
-  background-color: #fdfff0;
-}
-
-.user_table tr:last-child{
-  border-bottom:solid 1px #ddd;
-}
-
-.user_table th{
-  text-align: center;
-  padding: 7px 0;
-  border-right:solid 1px #ddd;
-  border-left:solid 1px #ddd;
-  width: 155px;
-}
-
-.user_table th:nth-child(1){
-  background-color: #fbbc5f;
-}
-
-
-.user_table td{
-  text-align: center;
-  padding: 7px 0;
-  border-right:solid 1px #ddd;
-  border-left:solid 1px #ddd;
-  width: 155px;
-}
-
-.user_table td a{
-  background-color: #155f02;
-  color: #ffffff;
-  padding:5px 20px;
-  border-radius: 30px;
-  font-weight: bold;
-}
-
-.user_table .popular{
-  width: 180px;
-}
-
-.user_table th.popular{
-  position: relative;
-}
-
-.user_table th.popular span.no1{
-  position: absolute;
-  top: -10px;
-  left:calc(50% - 30px);
-  background: #cc2828;
-  width: 60px;
-  font-size: 10px;
-  border-radius: 15px;
-  line-height: 1;
-  padding: 5px;
-}
-
-.user_table th.popular span.inner{
-  position: absolute;
-  color:#ffffff;
-  background-color: #c39a26;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 180px;
-  padding: 10px 0;
-  border-radius: 40px;
-}
-
-
-.user_table_false{
-  border-collapse: collapse;
-  border-spacing: 0;
-  table-layout: fixed;
-  width: 15%;
-  margin: 2% 1%;
-  background-color: #fff5f7;
-}
-
-.user_table_false tr:last-child{
-  border-bottom:solid 1px #ddd;
-}
-
-.user_table_false th{
-  text-align: center;
-  padding: 7px 0;
-  border-right:solid 1px #ddd;
-  border-left:solid 1px #ddd;
-  width: 155px;
-}
-
-.user_table_false th:nth-child(1){
-  background-color: #bbbbbb;
-}
-
-
-.user_table_false td{
-  text-align: center;
-  padding: 7px 0;
-  border-right:solid 1px #ddd;
-  border-left:solid 1px #ddd;
-  width: 155px;
-}
-
-.user_table_false td a{
-  background-color: #61394f;
-  color: #ffffff;
-  padding:5px 20px;
-  border-radius: 30px;
-  font-weight: bold;
-}
-
-.user_table_false .popular{
-  width: 180px;
-}
-
-.user_table_false th.popular{
-  position: relative;
-}
-
-.user_table_false th.popular span.no1{
-  position: absolute;
-  top: -10px;
-  left:calc(50% - 30px);
-  background: #b1b1b1;
-  width: 60px;
-  font-size: 10px;
-  border-radius: 15px;
-  line-height: 1;
-  padding: 5px;
-}
-
-.user_table_false th.popular span.inner{
-  position: absolute;
-  color:#ffffff;
-  background-color: #404040;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 180px;
-  padding: 10px 0;
-  border-radius: 40px;
-}
-
-.status_name1, .status_name2{
-    position: relative;
-    padding-bottom: 0.5em;
-    margin: 3%;
-}
-
-.status_name1{
-  color: #03b900;
-}
-
-.status_name2{
-  color: #a70000;
-}
-
-.status_name1::after, .status_name2::after {
-     position: absolute;
-     content: '';
-     left: 0;
-     bottom: 0;
-     width: 100%;
-     height: 7px;
-     box-sizing: border-box;
-     border-top: 3px solid black;
-     border-bottom: 1px solid black;
-}
-</style>
