[fix]レイアウト

--- a/app/views/users/courses/confirm.html.erb
+++ b/app/views/users/courses/confirm.html.erb
@@ -109,7 +109,7 @@
         </div>
 
         <div class="modoru-btn">
-          <%= f.submit 'Back!', name: 'back' %>
+          <%= f.submit 'Back!', name: 'back' class: "btn btn-danger" %>
         </div>
       <% end %>
       </div>
