--- a/app/views/users/courses/thanks.html.erb
+++ b/app/views/users/courses/thanks.html.erb
@@ -1,1 +1,12 @@
-thanks.html.erb
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <div class="container contbound">
+      <p class="bound ">
+        <span>ご注文ありがとうございます♪</span>
+      </p>
+    </div>
+    <div class="top-go">
+      <%= link_to "トップへ戻る", root_path, class: "btn btn-success" %>
+    </div>
+  </div>
+</div>
