--- a/app/views/users/orders/_select_course.html.erb
+++ b/app/views/users/orders/_select_course.html.erb
@@ -101,7 +101,7 @@
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
-							<button type="button" class="btn btn-primary"><%= f.submit "ボタン" %></button>
+							<button type="button" class="btn btn-primary"><%= f.submit "ボタン", class: "btn btn-primary" %></button>
 						</div>
 					</div>
 				</div>
