--- a/app/views/users/shops/show.html.erb
+++ b/app/views/users/shops/show.html.erb
@@ -35,30 +35,14 @@
 <span><%= link_to "コース一覧", users_courses_path(shop_id: params[:id]) %></span><br>
 <span><%= link_to "お店一覧", users_shops_path%></span>
 
-<%# <% if @shop.favorited_by?(current_user) %>
-<%#  <span>
-      <%= link_to "お気に入り解除", users_favorite_path(user_id: current_user.id, shop_id: @shop.id), method: :delete, class: "fav", remote: true do %>
-<%#        <i class="fas fa-heart" id="<%= @shop.id %>
-<%#"></i>
-<%#      <% end %>
-<%#  </span>
-<%#<% else %>
-<%#  <span>
-<%#      <i class="far fa-heart"></i>
-<%#      <span><%= link_to "お気に入り登録", users_favorites_path(shop_id: @shop.id), method: :post %></span>
-<%#  </span>
-<%#<% end %>
-
-<%#<%= flash[:notice] %>
-
 <div id="favorites_buttons_<%= @shop.id %>">
-    <%= render partial: 'users/favorites/favorite', locals: { shop: @shop, favorites: @favorites} %>
+    <%= render partial: 'users/favorites/favorite', locals: { shop: @shop, favorite: @favorite} %>
 </div>
 
 <%= link_to "チャットする", users_room_path(@shop.id) %>
 
 
-<h2>gmap</h2>
+<h2>店舗所在地</h2>
 <div id='map'></div>
 
 <style>
