--- a/app/views/shops/messages/show.html.erb
+++ b/app/views/shops/messages/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Shops::Messages#show</h1>
-<p>Find me in app/views/shops/messages/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-9">
+      <h2><strong>メッセージ詳細</strong></h2>
+    </div>
+  </div>
+</div>
