--- a/app/views/shops/shops/edit.html.erb
+++ b/app/views/shops/shops/edit.html.erb
@@ -64,7 +64,7 @@
             <h5><%= f.label :dinner_limit, 'ディナーラストオーダー', class: 'control-label' %></h5>
           </div>
           <%= f.text_field :dinner_limit, class: 'col-4 form-control' %>
-        </div>
+        </div><br>
         <div class="row">
           <div class="col-3">
           </div>
