--- a/app/views/shops/shops/show.html.erb
+++ b/app/views/shops/shops/show.html.erb
@@ -63,7 +63,7 @@
           <%= link_to "コース作成", new_shops_course_path %><br><br>
           <%= link_to "コース一覧リンク", shops_courses_path %><br><br>
           <%= link_to "お問い合わせ一覧", shops_inquiries_path %><br><br>
-          <%= link_to "メッセージ件数", shops_messages_path %><br><br>
+          <%= link_to "メッセージ一覧", shops_messages_path %><br><br>
           <%= link_to "お知らせ一覧", shops_informations_path %><br><br>
           <%= link_to "予約一覧", shops_orders_path %><br><br>
           <%= link_to "予約キャンセル一覧", shops_orders_path %><br><br>
