--- a/app/views/shops/courses/new.html.erb
+++ b/app/views/shops/courses/new.html.erb
@@ -1,23 +1,50 @@
-<h1>Shops::Courses#new</h1>
-
-<%= form_for @course, url: shops_courses_path do |f| %>
-<h3>コース名</h3>
-<%= f.text_field :name %>
-
-<h3>紹介文</h3>
-<%= f.text_field :introduction %>
-
-<h3>最大人数</h3>
-<%= f.text_field :maximum_people %>
-
-<h3>最小人数</h3>
-<%= f.text_field :minimum_people %>
-
-<h3>価格</h3>
-<%= f.text_field :price %>
-
-<%= f.submit "コースを追加" %>
-
-<% end %>
-
-<p>Find me in app/views/shops/courses/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-11">
+      <h2><strong>コース作成</strong></h2><br>
+        <%= form_for @course, url: shops_courses_path do |f| %>
+        <div class="row">
+          <div class="col-3">
+            <h4>コース名</h4>
+          </div>
+          <div class="col-3">
+            <%= f.text_field :name %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4>紹介文</h4>
+          </div>
+          <div class="col-3">
+            <%= f.text_field :introduction %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4>最大人数</h4>
+          </div>
+          <div class="col-3">
+            <%= f.text_field :maximum_people %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4>最小人数</h4>
+          </div>
+          <div class="col-3">
+            <%= f.text_field :minimum_people %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <h4>価格</h4>
+          </div>
+          <div class="col-3">
+            <%= f.text_field :price %>
+          </div>
+        </div><br>
+        <%= f.submit "コースを追加", class: 'col-5 btn btn-secondary' %><br><br>
+        <% end %>
+    </div>
+  </div>
+</div>
