--- a/app/views/shops/courses/show.html.erb
+++ b/app/views/shops/courses/show.html.erb
@@ -1,24 +1,42 @@
-<h1>Shops::Courses#show</h1>
-
-<%= link_to '編集する', edit_shops_course_path(@course) %>
-
-<%= link_to '削除する', shops_course_path(@course.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-
-<%= link_to "戻る", shops_courses_path(current_shop) %>
-
-
-<h3>コース名</h3>
-<%= @course.name %>
-
-<h3>説明</h3>
-<%= @course.introduction %>
-
-<h3>最大人数</h3>
-<%= @course.maximum_people %>
-
-<h3>最小人数</h3>
-<%= @course.minimum_people %>
-
-<h3>価格</h3>
-<%= @course.price %>
-<p>Find me in app/views/shops/courses/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-11">
+      <h2><strong>コース詳細</strong></h2>
+      <table class="table table-bordered">
+        <tr class="shop-tr">
+          <td>コース名</td>
+          <td>
+            <%= @course.name %>
+          </td>
+        </tr>
+        <tr class="shop-tr">
+          <td>説明</td>
+          <td>
+            <%= @course.introduction %>
+          </td>
+        </tr>
+        <tr class="shop-tr">
+          <td>最大人数</td>
+          <td>
+            <%= @course.maximum_people %>
+          </td>
+        </tr>
+        <tr class="shop-tr">
+          <td>最小人数</td>
+          <td>
+            <%= @course.minimum_people %>
+          </td>
+        </tr>
+        <tr class="shop-tr">
+          <td>価格</td>
+          <td>
+            <%= @course.price %>
+          </td>
+        </tr>
+      </table><br>
+      <%= link_to '編集する', edit_shops_course_path(@course), class: "btn btn-secondary" %> 
+      <%= link_to '削除する', shops_course_path(@course.id), method: :delete, "data-confirm" => "本当に削除しますか？", class:"btn btn-secondary" %> 
+      <%= link_to "戻る", shops_courses_path(current_shop), class: "btn btn-secondary" %><br><br>
+    </div>
+  </div>
+</div>
