--- a/app/views/shops/informations/edit.html.erb
+++ b/app/views/shops/informations/edit.html.erb
@@ -31,7 +31,7 @@
       <div class="col-1">
       </div>
       <div class="col-6"><br>
-        <%= link_to "お知らせ一覧", shops_informations_path, class:"col-3 btn btn-secondary" %>
+        <%= link_to "お知らせ一覧", shops_informations_path, class: 'col-3 btn btn-secondary' %>
       </div>
     </div>
     <% end %>
