--- a/app/views/shops/informations/show.html.erb
+++ b/app/views/shops/informations/show.html.erb
@@ -1,7 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-10 ofset-2">
-      <h2><strong>お知らせ詳細</strong></h2><br>
+      <h2><strong>お知らせ詳細</strong></h2>
+      <div class="row">
+        <div class="col-4">
+          <%= attachment_image_tag @information, :information_image, :fill, 250, 250, format: 'jpeg', fallback: "no_image.shop.jpg", size:"250x250" %>
+        </div>
+      </div>
       <div class="row">
         <div class="col-2">
           <h5>店名</h5>
@@ -26,18 +31,13 @@
           <h5><%= @information.text %></h5>
         </div>
       </div>
-      <div class="row">
-        <div class="col-4">
-          <%= attachment_image_tag @information, :information_image, :fill, 250, 250, format: 'jpeg', fallback: "no_image.shop.jpg", size:"250x250" %>
-        </div>
-      </div>
-      <div class="font"><br><br>
+      <div class="font"><br>
         <% if @information.shop == current_shop %>
           <%= link_to "編集",edit_shops_information_path(@information.id), class: "col-xs-2 btn btn-secondary edit_information_#{@information.id}" %>
           <%= link_to "削除",shops_information_path(@information.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "col-xs-2 btn btn-secondary destroy_information_#{@information.id}" %>
         <% end %>
         <%= link_to "お知らせ一覧", shops_informations_path, class:"col-4 btn btn-secondary" %>
-      </div>
+      </div><br>
     </div>
   </div>
 </div>
