--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,17 @@
           </div>
         </div>
         <div class="header_sub">
-          <% if user_signed_in? && !request.fullpath.include?("admins") && request.fullpath.include?("users") %>
+          <% if shop_signed_in? && request.fullpath.include?("shops") && !request.fullpath.include?("admins") && !request.fullpath.include?("users") %>
+          <nav>
+            <ul class=head-ul>
+              <li class="nav-list"><%= link_to "" %></li>
+              <li class="nav-list"><%= link_to "" %></li>
+              <li class="nav-list"><%= link_to "" %></li>
+              <li class="nav-list"><%= link_to "" %></li>
+              <span><li class="nav-list"><%= link_to "Logout", destroy_shop_session_path, method: :delete, class: "btn btn-c" %></li></span>
+            </ul>
+          </nav>
+          <% elsif user_signed_in? && !request.fullpath.include?("admins") %>
           <nav>
             <ul class=head-ul>
               <li><%= link_to "MyPage", users_user_path(current_user.id), class: "head-list" %></li>
@@ -32,7 +42,6 @@
               <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "head-list" %></li>
             </ul>
           </nav>
-
           <% elsif admin_signed_in? && request.fullpath.include?("admins") %>
           <nav>
             <ul class=head-ul>
@@ -44,16 +53,7 @@
             </ul>
           </nav>
 
-          <% elsif shop_signed_in? && request.fullpath.include?("shops") %>
-          <nav>
-            <ul class=head-ul>
-              <li class="nav-list"><%= link_to "" %></li>
-              <li class="nav-list"><%= link_to "" %></li>
-              <li class="nav-list"><%= link_to "" %></li>
-              <li class="nav-list"><%= link_to "" %></li>
-              <span><li class="nav-list"><%= link_to "Logout", destroy_shop_session_path, method: :delete, class: "btn btn-c" %></li></span>
-            </ul>
-          </nav>
+          
 
           <% else %>
             <ul class=head-ul>
